# markdown

./: .gitignore  README.md  cli.py  config.yaml  convert.py  example.md  output.docx  pyproject.toml
cli/: markdown_convert.py  pdf_stretch.py
files/: example2.md
snakemake/: pdf_stretch.Snakefile
src/markdown/: markdown.py
src/pdf/: main.py  pdf.py  strech.py
